--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.5.0",
     "bootswatch": "^5.3.2",
     "package.json": "^2.0.1",
+    "primereact": "^10.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
