--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
     "bootswatch": "^5.3.2",
+    "moment": "^2.29.4",
     "package.json": "^2.0.1",
     "primereact": "^10.0.2",
     "react": "^18.2.0",
